# ED_GICIB

./: README.md
1-Listas/1-ListaEstatica/: TElemento.c  TListaEstatica.c  TListaEstatica.h  main.c
1-Listas/2-ListaEnlazadaSimple/: CMakeLists.txt  listaEnlazadaDinamica.c  listaEnlazadaDinamica.h  main.c  tElemento.c
1-Listas/3-ListaDoblementeEnlazada/: main.c
1-Listas/4-ListaDinamicaPunteroPrincipioFin/: ListaEnlazadaPunteroPrincipioFin.c  ListaEnlazadaPunteroPrincipioFin.h  main.c
1-Listas/5-listaDinamicaCircular/: ListaCircular.h  TElemento.c  TElemento.h
1-Listas/5.5-ListaCircularEstatica/: CMakeLists.txt  TListaCircularEstatica.c  TListaCircularEstatica.h  main.c
1-Listas/6-ListaCircularDoblementeEnlazada/: listaCircularDoblementeEnlazada.c  main.c
1-Listas/7-ListaCircularDoblementeEnlazadaPunteroprinicpioFin/: TElemento.h  listaNombreLargo.h
2-Pilas/PilaEstatica/: CMakeLists.txt  TStaticStack.c  TStaticStack.h  main.c
2-Pilas/ejercicioPila/: CMakeLists.txt  PilaDinamica.c  PilaDinamica.h  TElemento.c  TElemento.h  main.c
2-Pilas/pilaDinamica/: CMakeLists.txt  PilaDinamica.c  PilaDinamica.h  TElemento.c  TElemento.h  main.c
3-Colas/ColaDinamica/: TElemento.c  TElemento.h  main.c
3-Colas/ColaEstatica/: CMakeLists.txt  TStaticQueue.c  TStaticQueue.h  main.c
4-Conuntos/DinamicSet-Alumnos/: CMakeLists.txt  TConjuntoDinamico.c  TConjuntoDinamico.h  (+3 more)
Listas/listaDinamica/: CMakeLists.txt
Listas/listaDinamica/listaEnlazadaSimple/: listaEnlazadaDinamica.c  listaEnlazadaDinamica.h  listaEnlazadaSimple.c  listaEnlazadaSimple.h
MainGenérico/: main.c
(+36 files in other folders)
